# ft_lemin

./: .gitignore  CMakeLists.txt  Makefile  author  find_paths_pseudocode  main.c
includes/: lemin.h
libft/: CMakeLists.txt  Makefile  ft_int_vector_copy.c  ft_numlen.c  ft_strchr_bool.c  ft_strsplit.c  ft_strsplit_del.c  get_next_line.c  libft.h  queue_void.c  vector_int.c  vector_void.c
libft/queue/: ft_void_queue_free.c  ft_void_queue_init.c  ft_void_queue_pop_back.c  ft_void_queue_push.c  ft_void_queue_resize.c
libft/vectors/: ft_int_vector_copy.c  ft_int_vector_init.c  ft_int_vector_pop_back.c  ft_int_vector_push_back.c  ft_int_vector_push_front.c  ft_int_vector_reset_and_free.c  ft_void_vector_copy.c  ft_void_vector_init.c  ft_void_vector_pop_back.c  ft_void_vector_push_back.c  ft_void_vector_reset_and_free.c  ft_void_vector_search.c
problem_maps/: sart-end  seg  seg1  short_and_long  super
src/: algo_find_new_way.c  algo_find_way.c  algo_make_new_way.c  algo_recipe.c  answer_ants_run.c  bfs.c  create_rooms.c  data_struct.c  debug_info.c  destroyers.c  find_paths.algo  find_paths.c  find_way.c  get_ants.c  get_data.c  get_links.c  get_rooms.c  init_data.c  main.c  output_ants.c  output_ants_run.c  output_path_sort.c  queue.c  read_input.c  store_input_strings.c
test_lem-in/: lem-in  lem-in.sh
test_lem-in/invalid_maps/: invalid_ants  invalid_coords  invalid_link  invalid_room  no_solution  no_start
test_lem-in/maps/: infinity_output  now_seg  sart-end  seg2  seg3  short_and_long  super2
