cmake_minimum_required(VERSION 3.15)
project(lem_in C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)

add_executable(lem_in
        includes/lemin.h
        libft/ft_abs.c
        libft/ft_atoi.c
        libft/ft_atoi_helper.c
        libft/ft_bzero.c
        libft/ft_int_vector_copy.c
        libft/ft_int_vector_init.c
        libft/ft_int_vector_pop_back.c
        libft/ft_int_vector_push_back.c
        libft/ft_int_vector_push_front.c
        libft/ft_int_vector_reset_and_free.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isthis.c
        libft/ft_itoa.c
        libft/ft_lltoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_numlen.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putnstr.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_realloc.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strchr_pos.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoinfree.c
        libft/ft_strjoinfree2.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strnchr.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strsplit_del.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strsubfree.c
        libft/ft_strtol.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_ulltoa.c
        libft/ft_ulltoa_base.c
        libft/ft_void_queue_free.c
        libft/ft_void_queue_init.c
        libft/ft_void_queue_pop_back.c
        libft/ft_void_queue_push.c
        libft/ft_void_queue_resize.c
        libft/ft_void_vector_copy.c
        libft/ft_void_vector_init.c
        libft/ft_void_vector_pop_back.c
        libft/ft_void_vector_push_back.c
        libft/ft_void_vector_reset_and_free.c
        libft/ft_void_vector_search.c
        libft/get_next_line.c
        libft/libft.h
        src/algo_find_new_way.c
        src/algo_find_way.c
        src/algo_make_new_way.c
        src/algo_recipe.c
        src/destroyers.c
        src/get_ants.c
        src/get_data.c
        src/get_links.c
        src/get_rooms.c
        src/init_data.c
        src/main.c
        src/output_ants.c
        src/output_ants_run.c
        src/output_path_sort.c
        src/queue.c
        src/store_input_strings.c)
